[CAMEL-11807] Upgrade camel-sql to junit5